Знакомство с множеством 2.6